--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: 50vh;
   overflow: hidden;
+  background-repeat: no-repeat;
   background: url("bg.png"), -webkit-linear-gradient(bottom, #0250c5, #d43f8d);
 }
 ::selection{
